20210510 全面用bootstrap重写，功能完善，细节和文件目录待优化

--- a/pages/nav_copy.html
+++ b/pages/nav_copy.html
@@ -11,7 +11,7 @@
     </head>
     <body>
         <div id="title">
-            <div id="title-center">Leaflet地图展示</div>
+            <div id="title-center">坐标转换工具</div>
         </div>
         <div id="rightup">不走寻常路，只爱陌生人！</div>
         <div id="pic" style="background: url(../static/images/bg.jpg);"></div>
