--- a/pages/introduce.html
+++ b/pages/introduce.html
@@ -1,6 +1,7 @@
 <html>
     <head>
-        <meta charset="utf-8">
+        <meta charset=utf-8 />
+		<meta name='viewport' content='width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no' />
         <script src="https://cdn.bootcdn.net/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-wEmeIV1mKuiNpC+IOBjI7aAzPcEZeedi5yW5f2yOq55WWLwNGmvvx4Um1vskeMj0" crossorigin="anonymous">
     </head>
@@ -9,6 +10,7 @@
             <div class="pricing-header p-3 pb-md-4 mx-auto text-center">
                 <h1 class="display-4 fw-normal">XMX地图导航站</h1>
                 <p class="fs-5 text-muted">这是一个非常带劲的地图导航网站。</p>
+                <img src="../static/images/haha.PNG" style="text-align: center; width: 22%;">
             </div>
         </div>
     </body>
