--- a/pages/schoolmap.html
+++ b/pages/schoolmap.html
@@ -2,8 +2,7 @@
 
 	<head>
 		<meta charset=utf-8 />
-		<title>Simple FeatureLayer</title>
-		<meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
+		<meta name='viewport' content='width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no' />
 
 		<!-- 载入  Leaflet1.0.0-->
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/leaflet/1.0.0-rc.1/leaflet.css" />
