20210517 功能补全 细节待完善

--- a/pages/heatMap.html
+++ b/pages/heatMap.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<meta http-equiv="content-type" content="text/html; charset=UTF-8" />
 <html>
     <head>
         <meta charset="utf-8">
@@ -103,4 +104,17 @@
 	</body>
     <footer>
     </footer>
+	<style>
+		body {
+				margin: 0;
+				padding: 0;
+			}
+			#map {
+				position: absolute;
+				top: 0;
+				bottom: 0;
+				right: 0;
+				left: 0;
+			}
+	</style>
 </html>
