--- a/pages/trans.html
+++ b/pages/trans.html
@@ -1,3 +1,4 @@
+<meta http-equiv="content-type" content="text/html; charset=UTF-8" />
 <html>
 <head>
     <meta charset=utf-8 />
@@ -29,9 +30,9 @@
                                 <option value="3">WGS84</option>
                             </select>
                         </td>
-                        <td><input id="input-lon" class='form-control' value="119.3333294200" placeholder="请输入经度"
+                        <td><input id="input-lon" class='form-control' value="" placeholder="请输入经度"
                                 style="width: 150px;margin-right: 3%;float: left;" /><input id="input-lat"
-                                class='form-control' value="27.2202520900" placeholder="请输入纬度" style="width: 150px;" />
+                                class='form-control' value="" placeholder="请输入纬度" style="width: 150px;" />
                         </td>
                     </tr>
                 </tbody>
@@ -158,5 +159,10 @@
         }
     }
 </script>
-
+<style>
+    body {
+            margin: 0;
+            padding: 0;
+        }
+</style>
 </html>
