--- a/pages/introduce.html
+++ b/pages/introduce.html
@@ -1,3 +1,4 @@
+<meta http-equiv="content-type" content="text/html; charset=UTF-8" />
 <html>
     <head>
         <meta charset=utf-8 />
@@ -15,4 +16,10 @@
         </div>
     </body>
     <footer></footer>
+    <style>
+		body {
+				margin: 0;
+				padding: 0;
+			}
+	</style>
 </html>
