--- a/pages/perimeter.html
+++ b/pages/perimeter.html
@@ -45,12 +45,12 @@
 	<body>
 		<div id="map"></div>
 		<div id="query" class="leaflet-bar map-text">
-			<input type="radio" name="typeRadios" value="050000" onclick="handleTypeChange()">餐饮美食</input>
+			<input type="radio" name="typeRadios" value="050301" onclick="handleTypeChange()">我要吃肯德基</input>
 
-			<input type="radio" name="typeRadios" value="100000" onclick="handleTypeChange()">宾馆酒店</input>
+			<input type="radio" name="typeRadios" value="050302" onclick="handleTypeChange()">我要白嫖麦当劳</input>
 			<br>
-			<input type="radio" name="typeRadios" value="060000" onclick="handleTypeChange()">购物服务</input>
-			<input type="radio" name="typeRadios" value="160000" onclick="handleTypeChange()">金融服务</input>
+			<input type="radio" name="typeRadios" value="060100" onclick="handleTypeChange()">我要剁手</input>
+			<input type="radio" name="typeRadios" value="160000" onclick="handleTypeChange()">我要抢银行</input>
 
 		</div>
 		<div id="queryResult" class="queryResult">
